@@ -1,5 +1,6 @@
 
-	
+
+	- Added support for Firebug 1.1 (based on 1.1.0b12)	
 	- Added current FirePHP version and OS info to update URL
 
 2007-12-07 - Release Version: 0.0.5.26
